fixed page horizontal overflow, worked on the landing page design and tested the functionality of the whole site

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 
 
 body {
+  overflow: hidden;
   margin: 0;
   font-family: 'Hahmlet', serif;
   font-family: 'JetBrains Mono', monospace;
